--- a/locales/ru.json
+++ b/locales/ru.json
@@ -30,6 +30,14 @@
       "title": "Jammer",
       "description": "Платформа для независимых разработчиков игр, аналог itch.io. Полнофункциональный маркетплейс с системой загрузки, продажи и рецензирования игр."
     },
+    "trucker": {
+      "title": "Trucker",
+      "description": "Работа над клиентскими конфигурациями в команде Customer Technologies Team. Разработка и поддержка backend-части проектов."
+    },
+    "viomitra": {
+      "title": "VioMitra",
+      "description": "Разработка сервиса онлайн-аукционов. Руководство стажерами, участие в разработке микросервисов."
+    },
     "purmarili": {
       "title": "Пурмарили",
       "description": "Веб-приложение для сети ресторанов в Ростове-на-Дону. Включает кастомную административную панель для управления контентом."
@@ -46,26 +54,19 @@
     "title": "Опыт работы",
     "trucker": {
       "title": "Backend Developer",
-      "company": "Trucker",
-      "description": "Работа над клиентскими конфигурациями в команде Customer Technologies Team. Разработка и поддержка backend-части проектов.",
-      "technologies": "Технологии"
+      "company": "Trucker"
     },
     "jammer": {
       "title": "Fullstack Developer & Co-founder",
-      "company": "Jammer",
-      "description": "Технический лидер и один из основателей проекта. Разработка платформы для независимых разработчиков игр с нуля."
+      "company": "Jammer"
     },
     "viomitra": {
       "title": "Frontend Developer",
-      "company": "VioMitra",
-      "description": "Разработка сервиса онлайн-аукционов. Руководство стажерами, участие в разработке микросервисов."
+      "company": "VioMitra"
     }
   },
   "contact": {
     "title": "Свяжитесь со мной",
     "description": "Всегда открыт к новым возможностям и интересным проектам. Свяжитесь со мной, и мы обсудим, как я могу помочь в реализации ваших идей."
-  },
-  "footer": {
-    "copyright": "&copy; 2025 vgartg. Все права защищены."
   }
 }
