Edit some on main page

--- a/locales/en.json
+++ b/locales/en.json
@@ -76,15 +76,15 @@
       "trucker": "December 2024 — Present",
       "jammer": "July 2024 — Present",
       "elina": "August 2025 — Present",
-      "purmarili": "May 2024 — Present",
+      "purmarili": "May 2024 — September 2024",
       "viomitra": "July 2023 — December 2024"
     },
     "durations": {
-      "trucker": "11 months",
-      "jammer": "1 year 4 months",
-      "elina": "2 mounths",
-      "purmarili": "1 year 1 month",
-      "viomitra": "1 year 6 months"
+      "trucker": "",
+      "jammer": "",
+      "elina": "",
+      "purmarili": "",
+      "viomitra": ""
     }
   },
   "contact": {
