--- a/locales/ru.json
+++ b/locales/ru.json
@@ -57,7 +57,7 @@
       "company": "Trucker"
     },
     "jammer": {
-      "title": "Fullstack Developer & Co-founder",
+      "title": "CEO & Fullstack Developer",
       "company": "Jammer"
     },
     "viomitra": {
