--- a/locales/ru.json
+++ b/locales/ru.json
@@ -28,7 +28,13 @@
     "title": "Мои проекты",
     "jammer": {
       "title": "Jammer",
-      "description": "Платформа для независимых разработчиков игр, аналог itch.io. Полнофункциональный маркетплейс с системой загрузки, продажи и рецензирования игр."
+      "description": "Платформа для независимых разработчиков игр, аналог itch.io. Полнофункциональный маркетплейс с системой загрузки, продажи и рецензирования игр.",
+      "requisites": "Детали организации",
+      "role": "Учредитель",
+      "fio": "Горбанёв В.О.",
+      "inn": "ИНН",
+      "kpp": "КПП",
+      "ogrn": "ОГРН"
     },
     "trucker": {
       "title": "Trucker",
@@ -90,5 +96,11 @@
   "contact": {
     "title": "Свяжитесь со мной",
     "description": "Всегда открыт к новым возможностям и интересным проектам. Свяжитесь со мной, и мы обсудим, как я могу помочь в реализации ваших идей."
+  },
+  "copy": {
+    "inn": "ИНН скопирован",
+    "kpp": "КПП скопирован",
+    "ogrn": "ОГРН скопирован", 
+    "success": "Скопировано!"
   }
 }
