--- a/locales/ru.json
+++ b/locales/ru.json
@@ -7,13 +7,11 @@
     "contact": "Контакты"
   },
   "hero": {
-    "greeting": "Привет, я",
-    "title": "Fullstack разработчик",
-    "name": "Валерий",
+    "brand": "VGARTG",
+    "title": "Web-разработчик",
     "typing_first": "Создаю",
-    "typing_second": "с помощью",
-    "typing_between": "digital-продукты",
-    "description": "Превращаю сложные идеи в элегантные и функциональные решения. Более 2 лет опыта в веб-разработке.",
+    "description": "Я показываю путь человека, который работает с реальными системами, пишет код, принимает решения и отвечает за их последствия.",
+    "second_description": "Мне интересны продукты, архитектура, бизнес и мышление, а не инфошум.",
     "projects": "Мои проекты",
     "contact": "Связаться со мной"
   },
